# toadbox

./: Dockerfile  Makefile  README.md  docker-compose.yml
toadbox-manager/: pyproject.toml
toadbox-manager/src/toadbox_manager/: app.py  models.py  terminal.py
toadbox-manager/src/toadbox_manager/screens/: create_instance.py  terminal_demo.py  terminal_widget.py
toadbox-manager/tests/: test_models.py
