[project]
name = "toadbox-manager"
version = "0.1.0"
description = "A TUI-based manager for Toadbox container instances"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "docker>=7.1.0",
    "rich>=14.2.0",
    "textual>=7.1.0",
    "pyyaml>=6.0",
    "pyte>=0.8",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.12.0",
    "pytest-mock>=3.10",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C"]
extend-ignore = ["E203"]

[project.scripts]
toadbox-manager = "main:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
